--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 certifi==2024.7.4
 charset-normalizer==3.3.2
+emoji==2.12.1
 idna==3.7
+loguru==0.7.2
 python-dotenv==1.0.1
 requests==2.32.3
+typing_extensions==4.12.2
 urllib3==2.2.2
